welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:3: error: type mismatch;
 found   : Int
 required: Boolean
    if((a>0 && b<0)||(a<0 && b>)){return true}
                             ^